# ghsync

./: .SRCINFO  Cargo.toml  LICENSE  PKGBUILD  ghsync.install
src/: backup.rs  cli.rs  github.rs  main.rs
